--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,9 @@ processResources {
         expand props
     }
 }
+
+
+jar {
+    archiveBaseName.set('UtilityX-Core')
+    archiveVersion.set(version)
+}
